--- a/Aula16MyFinances/web/WEB-INF/jspf/header.jspf
+++ b/Aula16MyFinances/web/WEB-INF/jspf/header.jspf
@@ -53,6 +53,8 @@
         <%if(session.getAttribute("user.role").equals("ADMIN")){%>
         | <a href="users.jsp">USUÁRIOS</a>
         <%}%>
+        | <a href="categories.jsp">CATEGORIAS</a>
+        | <a href="transactions.jsp">TRANSAÇÕES FINANCEIRAS</a>
     </form>
 <%}%>
 <hr/>
